// Copyright Â© 2017-2018 Stratumn SAS
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/stratumn/alice/cli/grpc/ext/ext.proto";

package stratumn.alice.app.contacts.grpc;

option go_package = "github.com/stratumn/alice/app/contacts/grpc;grpc";

// The contacts service definition.
service Contacts {
  // Streams all the contacts.
  rpc List (ListReq) returns (stream Contact) {
    option (stratumn.alice.cli.grpc.ext.method_desc) = "List all the contacts";
  }

  // Returns a contact.
  rpc Get (GetReq) returns (Contact) {
    option (stratumn.alice.cli.grpc.ext.method_desc) = "Display a contact";
  }

  // Sets a contact.
  rpc Set (SetReq) returns (Contact) {
    option (stratumn.alice.cli.grpc.ext.method_desc) = "Set a contact";
  }

  // Delete a contact.
  rpc Delete (DeleteReq) returns (Contact) {
    option (stratumn.alice.cli.grpc.ext.method_desc) = "Delete a contact";
  }
}

// The contact message containing the name and peer ID.
message Contact {
    string name = 1;
    bytes peer_id = 2 [(stratumn.alice.cli.grpc.ext.field_base58) = true];
}

// The list request message.
message ListReq {
}

// The get request message.
message GetReq {
  string name = 1 [
    (stratumn.alice.cli.grpc.ext.field_desc) = "Contact name",
    (stratumn.alice.cli.grpc.ext.field_required) = true
  ];
}

// The set request message.
message SetReq {
  string name = 1 [
    (stratumn.alice.cli.grpc.ext.field_desc) = "Contact name",
    (stratumn.alice.cli.grpc.ext.field_required) = true
  ];
  bytes peer_id = 2 [
    (stratumn.alice.cli.grpc.ext.field_desc) = "Peer ID",
    (stratumn.alice.cli.grpc.ext.field_base58) = true,
    (stratumn.alice.cli.grpc.ext.field_required) = true
  ];
}

// The delete request message.
message DeleteReq {
  string name = 1 [
    (stratumn.alice.cli.grpc.ext.field_desc) = "Contact name",
    (stratumn.alice.cli.grpc.ext.field_required) = true
  ];
}
